--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script src="./animatebackground-plugin.js"></script>
     <script src="./easing.js"></script>
     <script src="./skrollr.min.js"></script>
-    <title>my-app</title>
+    <title>中诺物业</title>
   </head>
   <body>
     <noscript>
