--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>znlogo.jpg">
     <!-- 阿里巴巴矢量库 -->
     <link type="text/css" rel="stylesheet" href="//at.alicdn.com/t/font_1609243_3hyle7be5rb.css">
     <link href="./animate.css" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
     <script src="./animatebackground-plugin.js"></script>
     <script src="./easing.js"></script>
     <script src="./skrollr.min.js"></script>
-    <title>中诺物业</title>
+    <title>天津中诺物业服务有限公司</title>
   </head>
   <body>
     <noscript>
